adding updateEvent feature to change event fields